--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -6,16 +6,14 @@
 
 = Thread Synchronization Primitives =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_mutex.h SDL_mutex.h]
-
-Other Includes:  SDL_thread.h, SDL_stdinc.h, SDL_error.h
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_mutex.h SDL_mutex.h]
 
 
 == Introduction ==
 
-Functions in this group provide thread synchronization primitives for functions in the [[CategoryThread|Thread Management]] group.
+Functions in this group provide thread synchronization primitives for multi-threaded programing.
 
-There are 3 primitives available in SDL, the:
+There are 3 primitives available in SDL:
 *[[#Mutex|Mutex]]
 *[[#Semaphore|Semaphore]]
 *[[#CondVar|Condition Variable]]
@@ -23,7 +21,7 @@ There are 3 primitives available in SDL, the:
 
 <span id="Mutex"></span>
 === Mutex ===
-~-If you understand the phrase "mutually exclusive" then you already know the basic idea of a ''mutex''.  '''''Mutex'', or __mut__ual __ex__clusion, functions are used to protect data structures in multi-threaded processes.'''  By coordinating multiple threads using or calling the same data source a ''mutex'' prevents interference between threads that may cause instability in the program.  Threads take turns locking the ''mutex'' (accessing the resource) one at a time.  Waiting threads are queued up ^based on the mutex algorithm? / based on the OS?^ and take their turn locking (accessing) the shared resource as each previous thread unlocks (releases) the ''mutex''.  '''Only the thread that has locked the ''mutex'' can access the data structure to read or write to it.'''-~
+~-If you understand the phrase "mutually exclusive" then you already know the basic idea of a ''mutex''.  '''''Mutexes'', or __mut__ual __ex__clusions, are used to protect data structures in multi-threaded processes.'''  By coordinating multiple threads accessing the same data a ''mutex'' prevents interference between threads that may cause instability in the program.  Threads take turns locking the ''mutex'' (accessing the resource) one at a time.  Waiting threads are queued up and take their turn locking (accessing) the shared resource as each previous thread unlocks (releases) the ''mutex''.  '''Only the thread that has locked the ''mutex'' can access the data structure to read or write to it.'''-~
  ~-''Analogy:'' This is similar to needing a key to access the restroom at a gas station.
 *The clerk at the counter who controls access to the key is like the ''mutex''.<br/>
 *The restroom is like the data structure.<br/>
@@ -33,7 +31,7 @@ There are 3 primitives available in SDL, the:
 
 <span id="Semaphore"></span>
 === Semaphore ===
-~-'''''Semaphores'' have 2 features - they count and they snooze threads.'''  They can either count up from 0 or down from a preset starting point.  In both cases the critical value is 0.  It indicates that there is nothing available to be worked on.  '''When the count is 0 a ''semaphore'' tells waiting threads to sleep until the count is >0.'''  ''Semaphore'' functions are used to determine whether a data structure is available to be allocated to a thread, and releases a thread (or threads, if the count is >1) to access the data if it is.  Because of the potential to permit multiple threads access to the same data, the individual data structures are often protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.
+~-'''''Semaphores'' have 2 features - they count resources and they snooze threads.'''  They can either count up from 0 or down from a preset starting point.  In both cases a value of 0 indicates that there are no available resources.  '''When the count is 0 a ''semaphore'' tells threads to wait until the resource count is >0.'''  Because of the potential to permit multiple threads access to the same resource (ex: a job queue), the individual data structures are often protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.
 
 Note that a ''semaphore'' can behave much like a ''mutex'' if the count never exceeds 1.  Like a ''mutex'', a ''semaphore'' limited to 1 can only allow 1 thread past its "check point" in the process.  This effectively removes the possibility of another thread using the same data simultaneously.-~
 
