--- a/Tutorials.mediawiki
+++ b/Tutorials.mediawiki
@@ -62,3 +62,6 @@ There are a number of SDL tutorials available from different sources.
 
 * [http://ansuz.sooke.bc.ca/software/sdl-condvars.php Condition variables in SDL]
 : A good discussion of condition variables, in computer science rather than gaming context. Some mention of mutex and semaphore use.
+
+* [http://braindeadclown.com/GLUT_SDL_VS08.html SDL in Visual Studio 2008]
+: A very basic guide for setting up SDL for OpenGL development in Visual Studio 2008
