--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -464,305 +464,296 @@
 |
 |
 |-
-|value
-|description
+|SDLK_ALTERASE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_ALTERASE)
 |-
-|value
-|description
+|SDLK_SYSREQ
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_SYSREQ)
 |-
-|value
-|description
+|SDLK_CANCEL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CANCEL)
 |-
-|value
-|description
+|SDLK_CLEAR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CLEAR)
 |-
-|value
-|description
+|SDLK_PRIOR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PRIOR)
 |-
-|value
-|description
+|SDLK_RETURN2
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_RETURN2)
 |-
-|value
-|description
+|SDLK_SEPARATOR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_SEPARATOR)
 |-
-|value
-|description
+|SDLK_OUT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_OUT)
 |-
-|value
-|description
+|SDLK_OPER
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_OPER)
 |-
-|value
-|description
+|SDLK_CLEARAGAIN
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CLEARAGAIN)
 |-
-|value
-|description
+|SDLK_CRSEL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CRSEL)
 |-
-|value
-|description
+|SDLK_EXSEL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_EXSEL)
 |-
-|value
-|description
+|
+|
 |-
-|value
-|description
+|SDLK_KP_00
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_00)
 |-
-|value
-|description
+|SDLK_KP_000
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_000)
 |-
-|value
-|description
+|SDLK_THOUSANDSSEPARATOR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_THOUSANDSSEPARATOR)
 |-
-|value
-|description
+|SDLK_DECIMALSEPARATOR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_DECIMALSEPARATOR)
 |-
-|value
-|description
+|SDLK_CURRENCYUNIT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CURRENCYUNIT)
 |-
-|value
-|description
+|SDLK_CURRENCYSUBUNIT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CURRENCYSUBUNIT)
 |-
-|value
-|description
+|SDLK_KP_LEFTPAREN
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_LEFTPAREN)
 |-
-|value
-|description
+|SDLK_KP_RIGHTPAREN
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_RIGHTPAREN)
 |-
-|value
-|description
+|SDLK_KP_LEFTBRACE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_LEFTBRACE)
 |-
-|value
-|description
+|SDLK_KP_RIGHTBRACE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_RIGHTBRACE)
 |-
-|value
-|description
+|SDLK_KP_TAB
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_TAB)
 |-
-|value
-|description
+|SDLK_KP_BACKSPACE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_BACKSPACE)
 |-
-|value
-|description
+|SDLK_KP_A
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_A)
 |-
-|value
-|description
+|SDLK_KP_B
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_B)
 |-
-|value
-|description
+|SDLK_KP_C
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_C)
 |-
-|value
-|description
+|SDLK_KP_D
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_D)
 |-
-|value
-|description
+|SDLK_KP_E
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_E)
 |-
-|value
-|description
+|SDLK_KP_F
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_F)
 |-
-|value
-|description
+|SDLK_KP_XOR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_XOR)
 |-
-|value
-|description
+|SDLK_KP_POWER
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_POWER)
 |-
-|value
-|description
+|SDLK_KP_PERCENT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_PERCENT)
 |-
-|value
-|description
+|SDLK_KP_LESS
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_LESS)
 |-
-|value
-|description
+|SDLK_KP_GREATER
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_GREATER)
 |-
-|value
-|description
+|SDLK_KP_AMPERSAND
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_AMPERSAND)
 |-
-|value
-|description
+|SDLK_KP_DBLAMPERSAND
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_DBLAMPERSAND)
 |-
-|value
-|description
+|SDLK_KP_VERTICALBAR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_VERTICALBAR)
 |-
-|value
-|description
+|SDLK_KP_DBLVERTICALBAR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_DBLVERTICALBAR)
 |-
-|value
-|description
+|SDLK_KP_COLON
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_COLON)
 |-
-|value
-|description
+|SDLK_KP_HASH
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_HASH)
 |-
-|value
-|description
+|SDLK_KP_SPACE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_SPACE)
 |-
-|value
-|description
+|SDLK_KP_AT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_AT)
 |-
-|value
-|description
+|SDLK_KP_EXCLAM
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_EXCLAM)
 |-
-|value
-|description
+|SDLK_KP_MEMSTORE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMSTORE)
 |-
-|value
-|description
+|SDLK_KP_MEMRECALL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMRECALL)
 |-
-|value
-|description
+|SDLK_KP_MEMCLEAR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMCLEAR)
 |-
-|value
-|description
+|SDLK_KP_MEMADD
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMADD)
 |-
-|value
-|description
+|SDLK_KP_MEMSUBTRACT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMSUBTRACT)
 |-
-|value
-|description
+|SDLK_KP_MEMMULTIPLY
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMMULTIPLY)
 |-
-|value
-|description
+|SDLK_KP_MEMDIVIDE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MEMDIVIDE)
 |-
-|value
-|description
+|SDLK_KP_PLUSMINUS
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_PLUSMINUS)
 |-
-|value
-|description
+|SDLK_KP_CLEAR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_CLEAR)
 |-
-|value
-|description
+|SDLK_KP_CLEARENTRY
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_CLEARENTRY)
 |-
-|value
-|description
+|SDLK_KP_BINARY
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_BINARY)
 |-
-|value
-|description
+|SDLK_KP_OCTAL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_OCTAL)
 |-
-|value
-|description
+|SDLK_KP_DECIMAL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_DECIMAL)
 |-
-|value
-|description
+|SDLK_KP_HEXADECIMAL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_HEXADECIMAL)
 |-
-|value
-|description
+|
+|
 |-
-|value
-|description
+|SDLK_LCTRL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_LCTRL)
 |-
-|value
-|description
+|SDLK_LSHIFT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_LSHIFT)
 |-
-|value
-|description
+|SDLK_LALT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_LALT)
 |-
-|value
-|description
+|SDLK_LGUI
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_LGUI)
 |-
-|value
-|description
+|SDLK_RCTRL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_RCTRL)
 |-
-|value
-|description
+|SDLK_RSHIFT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_RSHIFT)
 |-
-|value
-|description
+|SDLK_RALT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_RALT)
 |-
-|value
-|description
+|SDLK_RGUI
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_RGUI)
 |-
-|value
-|description
+|
+|
 |-
-|value
-|description
+|SDLK_MODE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_MODE)
 |-
-|value
-|description
+|
+|
 |-
-|value
-|description
+|SDLK_AUDIONEXT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AUDIONEXT)
 |-
-|value
-|description
+|SDLK_AUDIOPREV
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AUDIOPREV
 |-
-|value
-|description
+|SDLK_AUDIOSTOP
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AUDIOSTOP)
 |-
-|value
-|description
+|SDLK_AUDIOPLAY
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AUDIOPLAY)
 |-
-|value
-|description
+|SDLK_AUDIOMUTE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AUDIOMUTE)
 |-
-|value
-|description
+|SDLK_MEDIASELECT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_MEDIASELECT)
 |-
-|value
-|description
+|SDLK_WWW
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_WWW)
 |-
-|value
-|description
+|SDLK_MAIL
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_MAIL)
 |-
-|value
-|description
+|SDLK_CALCULATOR
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CALCULATOR)
 |-
-|value
-|description
+|SDLK_COMPUTER
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_COMPUTER)
 |-
-|value
-|description
+|SDLK_AC_SEARCH
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_SEARCH)
 |-
-|value
-|description
+|SDLK_AC_HOME
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_HOME)
 |-
-|value
-|description
+|SDLK_AC_BACK
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_BACK)
 |-
-|value
-|description
+|SDLK_AC_FORWARD
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_FORWARD)
 |-
-|value
-|description
+|SDLK_AC_STOP
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_STOP)
 |-
-|value
-|description
+|SDLK_AC_REFRESH
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_REFRESH)
 |-
-|value
-|description
+|SDLK_AC_BOOKMARKS
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_AC_BOOKMARKS)
 |-
-|value
-|description
+|
+|
 |-
-|value
-|description
+|SDLK_BRIGHTNESSDOWN
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_BRIGHTNESSDOWN)
 |-
-|value
-|description
+|SDLK_BRIGHTNESSUP
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_BRIGHTNESSUP)
 |-
-|value
-|description
+|SDLK_DISPLAYSWITCH
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_DISPLAYSWITCH)
 |-
-|value
-|description
+|SDLK_KBDILLUMTOGGLE
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KBDILLUMTOGGLE)
 |-
-|value
-|description
+|SDLK_KBDILLUMDOWN
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KBDILLUMDOWN)
 |-
-|value
-|description
+|SDLK_KBDILLUMUP
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KBDILLUMUP)
 |-
-|value
-|description
+|SDLK_EJECT
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_EJECT)
 |-
-|value
-|description
-|-
-|value
-|description
-|-
-|value
-|description
-|-
-|value
-|description
+|SDLK_SLEEP
+|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_SLEEP)
 |}
 
 == Code Examples ==
