--- a/SDL_GetScancodeFromKey.mediawiki
+++ b/SDL_GetScancodeFromKey.mediawiki
@@ -14,11 +14,11 @@ SDL_scancode SDL_GetScancodeFromKey(SDLKey key)
 == Function Parameters ==
 {|
 |'''key'''
-|the desired SDLKey to query ???
+|the desired [[SDLKey]] to query ???
 |}
 
 == Return Value ==
-The SDL_scancode that corresponds to the given SDLKey. ???
+The SDL_scancode that corresponds to the given [[SDLKey]]. ???
 
 == Code Examples ==
 ```c++
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-See SDL_scancode for details. <<Color2(green, There is no info to link this to a page unless it links to SDL_keysym)>>
+See SDL_scancode for details. <<Color2(green, There is no info to link this to a page unless it only links to SDLKey)>>
 
 == Related Functions ==
 :[[SDL_GetScancodeName]]
