--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -6,7 +6,7 @@
 
 = Display Management, Window Management and Rendering =
 
-'''Primary Include:''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_video.h SDL_video.h]
+'''Include File(s):''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_video.h SDL_video.h]
 
 
 == Introduction ==
