--- a/CategoryRect.mediawiki
+++ b/CategoryRect.mediawiki
@@ -6,7 +6,7 @@
 
 = Rectangle Functions =
 
-'''Primary Include:''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rect.h SDL_rect.h]
+'''Include File(s):''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rect.h SDL_rect.h]
 
 
 == Introduction ==
