--- a/CategoryEvents.mediawiki
+++ b/CategoryEvents.mediawiki
@@ -6,7 +6,7 @@
 
 = Event Handling =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_events.h SDL_events.h]
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_events.h SDL_events.h]
 
 
 == Introduction ==
