--- a/CategoryJoystick.mediawiki
+++ b/CategoryJoystick.mediawiki
@@ -6,7 +6,7 @@
 
 = Joystick Support =
 
-'''Primary Include:''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_joystick.h SDL_joystick.h]
+'''Include File(s):''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_joystick.h SDL_joystick.h]
 
 
 == Introduction ==
