--- a/CategoryAudio.mediawiki
+++ b/CategoryAudio.mediawiki
@@ -6,7 +6,7 @@
 
 = Audio Device Management, Playing and Recording =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_audio.h SDL_audio.h]
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_audio.h SDL_audio.h]
 
 
 == Introduction ==
