--- a/CategoryIO.mediawiki
+++ b/CategoryIO.mediawiki
@@ -6,9 +6,7 @@
 
 = File I/O Abstraction =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rwops.h SDL_rwops.h]
-
-Other Includes: SDL_stdinc.h, SDL_error.h 
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rwops.h SDL_rwops.h]
 
 
 == Introduction ==
