--- a/CategoryTimer.mediawiki
+++ b/CategoryTimer.mediawiki
@@ -6,7 +6,7 @@
 
 = Timer Support =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_timer.h SDL_timer.h]
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_timer.h SDL_timer.h]
 
 
 == Introduction ==
