--- a/CategoryCPU.mediawiki
+++ b/CategoryCPU.mediawiki
@@ -5,7 +5,8 @@
 '''DRAFT'''
 
 = CPU Feature Detection =
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_cpuinfo.h SDL_cpuinfo.h]
+
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_cpuinfo.h SDL_cpuinfo.h]
 
 
 == Introduction ==
