--- a/CategoryEndian.mediawiki
+++ b/CategoryEndian.mediawiki
@@ -6,7 +6,7 @@
 
 = Byte Order and Byte Swapping =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_endian.h SDL_endian.h]
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_endian.h SDL_endian.h]
 
 
 == Introduction ==
