--- a/CategoryPower.mediawiki
+++ b/CategoryPower.mediawiki
@@ -6,11 +6,7 @@
 
 = Power Management Status =
 
-'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_power.h SDL_power.h]
-
-Other Includes:  SDL_stdinc.h
-
-<<Color2(green,Is this 'other include' actually optional?  Should it be listed on every page?)>>
+'''Include File(s):'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_power.h SDL_power.h]
 
 
 == Introduction ==
