--- a/CategoryEvents.mediawiki
+++ b/CategoryEvents.mediawiki
@@ -10,6 +10,18 @@
 
 
 == Introduction ==
+Event handling allows your application to receive input from the user. Event handling is initialized (along with video) with a call to:
+
+ ```
+SDL_Init(SDL_INIT_VIDEO);
+```
+ (''see'' [http://wiki.libsdl.org/moin.cgi/CategoryInit Initialization & Shutdown] and [[SDL_Init]]() ''for details'')
+
+Internally, SDL stores all the events waiting to be handled in an event queue. Using functions like [[SDL_PollEvent]](), [[SDL_PeepEvents]]() and [[SDL_WaitEvent]]() you can observe and handle waiting input events.
+
+The key to event handling in SDL is the SDL_Event union. The event queue itself is composed of a series of SDL_Event unions, one for each waiting event. SDL_Event unions are read from the queue with the [[SDL_PollEvent]]() function and it is then up to the application to process the information stored with them. 
+
+<<Color2(green,There is currently no page for SDL_Event.  Should one be created or should additional information be included here?)>>
 
 == Functions ==
 
