--- a/CategoryEvents.mediawiki
+++ b/CategoryEvents.mediawiki
@@ -21,7 +21,7 @@ Internally, SDL stores all the events waiting to be handled in an event queue. U
 
 The key to event handling in SDL is the SDL_Event union. The event queue itself is composed of a series of SDL_Event unions, one for each waiting event. SDL_Event unions are read from the queue with the [[SDL_PollEvent]]() function and it is then up to the application to process the information stored with them. 
 
-<<Color2(green,There is currently no page for SDL_Event.  Should one be created or should additional information be included here?)>>
+<<Color2(green,A page for SDL_Event is being created.  A link will be included here when it is ready.)>>
 
 == Functions ==
 
