add content from old wiki

--- a/SDL_TextInputEvent.mediawiki
+++ b/SDL_TextInputEvent.mediawiki
@@ -22,8 +22,9 @@ A structure that contains keyboard text input event ,,structure,, ^information^ 
 |-
 |char
 |'''text[SDL_TEXTINPUTEVENT_TEXT_SIZE]'''
-|the input text
+|the input text; *at most SDL_TEXTINPUTEVENT_TEXT_SIZE - 1 characters*
 |}
+<<Color2(green,The '''text''' field currently shows the same info in both columns because it could go in either per the header vs *old wiki*.  Where should it go?)>>
 
 == Code Examples ==
 ```c++
@@ -31,9 +32,14 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+* [[SDL_TextInputEvent]]() is a member of the [[SDL_Event]] union and is used when an event of type SDL_TEXTINPUT is reported. *
+
+== Related Structures ==
+:[[SDL_TextEditingEvent]]
 
 == Related Functions ==
+:[[SDL_StartTextInput]]
+:[[SDL_StopTextInput]]
 
 ----
 [[CategoryStruct]]
