update content (incomplete)

--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -18,316 +18,301 @@ The SDL virtual key representation.
 |the Esc key
 |-
 |SDLK_BACKSPACE
-|'\b'
+|the Back Space key
 |-
 |SDLK_TAB
-|'\t'
+|the Tab key
 |-
 |SDLK_SPACE
-|' '
+|the space bar key(s)
 |-
 |SDLK_EXCLAIM
-|'!'
+|!
 |-
 |SDLK_QUOTEDBL
-|'"'
+|"
 |-
 |SDLK_HASH
-|'#'
+|#
 |-
 |SDLK_PERCENT
-|'%'
+|%
 |-
 |SDLK_DOLLAR
-|'$'
+|$
 |-
 |SDLK_AMPERSAND
-|'&'
+|&
 |-
 |SDLK_QUOTE
-|'\''
+|'
 |-
 |SDLK_LEFTPAREN
-|'('
+|(
 |-
 |SDLK_RIGHTPAREN
-|')'
+|)
 |-
 |SDLK_ASTERISK
-|'*'
+|*
 |-
 |SDLK_PLUS
-|'+'
+|+
 |-
 |SDLK_COMMA
-|','
+|,
 |-
 |SDLK_MINUS
-|'-'
+|-
 |-
 |SDLK_PERIOD
-|'.'
+|.
 |-
 |SDLK_SLASH
-|'/'
+|/
 |-
 |SDLK_0
-|'0'
+|0
 |-
 |SDLK_1
-|'1'
+|1
 |-
 |SDLK_2
-|'2'
+|2
 |-
 |SDLK_3
-|'3'
+|3
 |-
 |SDLK_4
-|'4'
+|4
 |-
 |SDLK_5
-|'5'
+|5
 |-
 |SDLK_6
-|'6'
+|6
 |-
 |SDLK_7
-|'7'
+|7
 |-
 |SDLK_8
-|'8'
+|8
 |-
 |SDLK_9
-|'9'
+|9
 |-
 |SDLK_COLON
-|':'
+|:
 |-
 |SDLK_SEMICOLON
-|';'
+|;
 |-
 |SDLK_LESS
-|'<'
+|<
 |-
 |SDLK_EQUALS
-|'='
+|=
 |-
 |SDLK_GREATER
-|'>'
+|>
 |-
 |SDLK_QUESTION
-|'?'
+|?
 |-
 |SDLK_AT
-|'@'
-|-
-|
-|
+|@
 |-
 |SDLK_LEFTBRACKET
-|'['
+|[
 |-
 |SDLK_BACKSLASH
-|'\\'
+|\
 |-
 |SDLK_RIGHTBRACKET
-|']'
+|]
 |-
 |SDLK_CARET
-|'^'
+|^
 |-
 |SDLK_UNDERSCORE
-|'_'
+|_
 |-
 |SDLK_BACKQUOTE
-|'`'
+|`
 |-
 |SDLK_a
-|'a'
+|a
 |-
 |SDLK_b
-|'b'
+|b
 |-
 |SDLK_c
-|'c'
+|c
 |-
 |SDLK_d
-|'d'
+|d
 |-
 |SDLK_e
-|'e'
+|e
 |-
 |SDLK_f
-|'f'
+|f
 |-
 |SDLK_g
-|'g'
+|g
 |-
 |SDLK_h
-|'h'
+|h
 |-
 |SDLK_i
-|'i'
+|i
 |-
 |SDLK_j
-|'j'
+|j
 |-
 |SDLK_k
-|'k'
+|k
 |-
 |SDLK_l
-|'l'
+|l
 |-
 |SDLK_m
-|'m'
+|m
 |-
 |SDLK_n
-|'n'
+|n
 |-
 |SDLK_o
-|'o'
+|o
 |-
 |SDLK_p
-|'p'
+|p
 |-
 |SDLK_q
-|'q'
+|q
 |-
 |SDLK_r
-|'r'
+|r
 |-
 |SDLK_s
-|'s'
+|s
 |-
 |SDLK_t
-|'t'
+|t
 |-
 |SDLK_u
-|'u'
+|u
 |-
 |SDLK_v
-|'v'
+|v
 |-
 |SDLK_w
-|'w'
+|w
 |-
 |SDLK_x
-|'x'
+|x
 |-
 |SDLK_y
-|'y'
+|y
 |-
 |SDLK_z
-|'z'
-|-
-|
-|
+|z
 |-
 |SDLK_CAPSLOCK
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_CAPSLOCK)
-|-
-|
-|
+|the Caps Lock key
 |-
 |SDLK_F1
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F1)
+|the F1 key
 |-
 |SDLK_F2
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F2)
+|the F2 key
 |-
 |SDLK_F3
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F3)
+|the F3 key
 |-
 |SDLK_F4
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F4)
+|the F4 key
 |-
 |SDLK_F5
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F5)
+|the F5 key
 |-
 |SDLK_F6
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F6)
+|the F6 key
 |-
 |SDLK_F7
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F7)
+|the F7 key
 |-
 |SDLK_F8
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F8)
+|the F8 key
 |-
 |SDLK_F9
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F9)
+|the F9 key
 |-
 |SDLK_F10
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F10)
+|the F10 key
 |-
 |SDLK_F11
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F11)
+|the F11 key
 |-
 |SDLK_F12
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_F12)
-|-
-|
-|
+|the F12 key
 |-
 |SDLK_PRINTSCREEN
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PRINTSCREEN)
+|the Print Screen key
 |-
 |SDLK_SCROLLLOCK
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_SCROLLLOCK)
+|the Scroll Lock key
 |-
 |SDLK_PAUSE
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PAUSE)
+|the Pause key
 |-
 |SDLK_INSERT
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_INSERT)
+|the Insert key
 |-
 |SDLK_HOME
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_HOME)
+|the Home key
 |-
 |SDLK_PAGEUP
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PAGEUP)
+|the Page Up key
 |-
 |SDLK_DELETE
-|'\177'
+|the Delete / Del key
 |-
 |SDLK_END
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_END)
+|the End key
 |-
 |SDLK_PAGEDOWN
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_PAGEDOWN)
+|the Page Down key
 |-
 |SDLK_RIGHT
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_RIGHT)
+|the Right arrow key (directional keypad)
 |-
 |SDLK_LEFT
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_LEFT)
+|the Left arrow key (directional keypad)
 |-
 |SDLK_DOWN
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_DOWN)
+|the Down arrow key (directional keypad)
 |-
 |SDLK_UP
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_UP)
-|-
-|
-|
+|the Up arrow key (directional keypad)
 |-
 |SDLK_NUMLOCKCLEAR
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_NUMLOCKCLEAR)
+|the Num Lock key (number keypad)
 |-
 |SDLK_KP_DIVIDE
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_DIVIDE)
+|the Divide (/) key (number keypad)
 |-
 |SDLK_KP_MULTIPLY
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MULTIPLY)
+|the Multiply (*) key (number keypad)
 |-
 |SDLK_KP_MINUS
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_MINUS)
+|the Minus (-) key (number keypad)
 |-
 |SDLK_KP_PLUS
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_PLUS)
+|the Plus (+) key (number keypad)
 |-
 |SDLK_KP_ENTER
-|SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_ENTER)
+|the Enter key on the number keypad
 |-
 |SDLK_KP_1
 |SDL_SCANCODE_TO_KEYCODE(SDL_SCANCODE_KP_1)
